# pysotope

./: .gitignore  .readthedocs.yaml  README.md  TEST CORRECTION FULL.py  TEST_COMBINED CORRECTION.py  pyproject.toml
.github/workflows/: publish.yml
Scripts/: GCIRMS_data_cal.py  base_functions.py  figures.py  queries.py  regression.py  uncertainty_and_output.py
docs/: pysotope.rst  requirements.txt
docs/source/: conf.py  index.rst
misc/: Drift Correction - Model selection.py  EA_analysis.pptx  outline.key
src/: OSIBL-correction.py  OSIBL_correction.py  __init__.py  scrap.py
src/OSIBL_correction/: OSIBL_correction.py  __init__.py
src/OSIBL_correction/definitions/: standards.py
src/OSIBL_correction/utils/: GCIRMS_data_cal.py  base_functions.py  figures.py  queries.py  regression.py  uncertainty_and_output.py
src/OSIBL_correction/utils/corrections/: drift.py  linearity.py  vsmow.py
src/pysotope/: __init__.py  assign_chain_length.py  chains.py  processing.py  pysotope.py  standard_editor.py  standards.py
src/pysotope/EA/: base_functions.py  eaAnalyze.py  example_run.xlsx
src/pysotope/EA 2/: base_functions.py  eaAnalyze.py
src/pysotope/EA/Output example_raw.csv/: Log file.txt  pysotope_EA_log.txt
src/pysotope/EA/Output test.csv/: pysotope_EA_log.txt
src/pysotope/EA/utils/: VPDB_correction.py  config.py  drift_correction.py  ea_drift_correction.py  import_data.py  uncertainty_calculation.py
src/pysotope/utils/: base_functions.py  config.py  curve_fitting.py  define_standards.py  figures.py  pick_chain_rt.py  queries.py  uncertainty_and_output.py
src/pysotope/utils/chains/: chain_editor.py  chains.json  chains.py
src/pysotope/utils/corrections/: drift.py  function_alignment.py  linearity.py  methanol.py  pame.py  vsmow.py
src/pysotope/utils/outliers/: outliers.py
src/pysotope/utils/reference_standards/: RS_dC.csv  RS_dD.csv
src/utils/: base_functions.py  queries.py  regression.py
src/utils/corrections/: linearity.py  vsmow.py
src/utils/outliers/: outliers.py
test/: 20251205 NML_d13C_JMA GreenDrill ASIG FAME.csv  Log file.txt
test/Output 20251205 NML_d13C_JMA GreenDrill ASIG FAME.csv/: Log file.txt
test/Output 20251205 NML_d13C_JMA GreenDrill ASIG FAME.csv/Results/: Results - sample mean.csv  Results - sample replicates.csv  Results - standards.csv
test/Results/: Results - sample mean.csv  Results - sample replicates.csv  Results - standards.csv
workflows/: publish.yml
(+8 files in other folders)
