[tool.poetry]
name = "pysotope"
version = "1.12.2"
license = "MIT"
description = "Pysotope is an open-source package meant to processes raw data measured from the OSIBL GC-IRMS. Corrections are automatically calculated but the user must verify and confirm their application."
authors = ["Dr. Gerard Otiniano <gerardotiniano@gmail.com>", "Dr. Elizabeth Thomas"]
readme = "README.md"
packages = [{include = "pysotope", from = "src"}]

[tool.poetry.dependencies]
python      = "^3.9"
numpy       = "1.26.4"
scipy       = "1.13.1"
tabulate    = "0.9.0"
statsmodels = "0.14.5"
ipywidgets = "*"
scikit-learn = "*"
matplotlib = "3.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[options.package_data]
pysotope.utils = ["vsmow_standards/*.csv"]